# campusCompanion

./: README.md  package-lock.json  package.json  plopfile.js
campuscompanion/api/: .coverage  dockerfile  main.py  pyproject.toml
campuscompanion/api/app/: context.py
campuscompanion/api/data/: About NC State Transportation - Transportation.html  Accessible Parking Permits - Transportation.html  Bicycling - Transportation.html  CSC Undergraduate Restricted Electives _ CSC Undergraduate Academic Advising.html  CSC_Undergraduate_Academic_Advising.html  Carpool_Vanpool - Transportation.html  Casey Aquatic Center - Wellness and Recreation.html  Change or Cancel Your Meal Plan _ NC State Dining.html  Computer Programming Minor _ CSC Undergraduate Academic Advising.html  Computer Science (BS) _ semester_by_semester_plan.html  Conference_Group Dining and Vouchers _ NC State Dining.html  D. H. Hill Jr. Library _ NC State University Libraries.html  Department of Computer Science at North Carolina State University.html  Departmental Permits - Transportation.html  Electric Vehicles - Transportation.html  Equipment Checkout and Rental - Wellness and Recreation.html  FAQ _ NC State Dining.html  Facility Hours - Wellness and Recreation.html  Facility Master Plan - Wellness and Recreation.html  Fact Sheet_ The NC State University Libraries _ NC State University Libraries.html  Food Trucks _ NC State Dining.html  Grubhub Online Ordering _ NC State Dining.html  Health + Wellness _ NC State Dining.html  How Do I Choose_ _ NC State Dining.html  Introduction _ NC State Dining.html  (+36 more)
(+66 files in other folders)
